--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: OneWay Code
+name: Clover's Space
 
 # Short bio or description (displayed in the header)
-description: 积累一些代码
+description: 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars3.githubusercontent.com/u/4507068?v=3&s=400
+avatar: 
 
 
 #
@@ -22,12 +22,12 @@ footer-links:
   email: 
   facebook: 
   flickr: 
-  github: onewaycode
+  github: xchl903001
   instagram: 
   linkedin: 
   pinterest: 
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
 
 # Your disqus shortname, entering this will enable commenting on posts
