--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Clover's Space
 description: 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: 
+avatar: https://avatars2.githubusercontent.com/u/4465271?v=3&u=f802ed92a57c06d71ff0f93f99ce7160e846692f&s=140
 
 
 #
